--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,16 @@
 </style>
 </head>
 <body>
+<h2>2022-12-16 VolumeAxis</h2>
+<p>The default settings and alignments of the <code class="notranslate">VolumeAxis</code> processor, which renders x, y, and z axes next to a volume, have been reworked. It is now possible to define axis, caption, and label offsets as well as tick lengths relative to the extent of the input volume compared to absolute lengths in world coordinates. This links the axes settings more closely with the volume size and therefore no adjustments are needed when switching to a volume with a different extent.<br>
+The <code class="notranslate">Offset Scaling</code> property currently supports the following modes:</p>
+<ul>
+<li><strong>None</strong> No scaling, offsets and lengths are given in world coordinates.</li>
+<li><strong>Min</strong> (default) Relative scaling based on the shortest extent of the volume. Useful when visualizing a growing volume.</li>
+<li><strong>Max</strong> Relative scaling based on the longest extent of the volume. Useful when visualizing a shrinking volume.</li>
+<li><strong>Mean</strong> Relative scaling basd on the mean volume extent.</li>
+<li><strong>Diagonal</strong> Relative scaling based on the diagonal of the volume.</li>
+</ul>
 <h2>2022-11-25 The PropertyListWidget defaults to showing one processor</h2>
 <p>Previously the <code class="notranslate">PropertyListWidget</code> has shown the properties of all selected processors in the network.<br>
 This can sometimes be very slow to render for large selections, and in most cases one does not care about the properties when selecting many processors.<br>
@@ -90,9 +100,9 @@ Tags::GL,                       <span class="pl-c"><span class="pl-c">//</span> 
 <span class="pl-s"><span class="pl-pds">)"</span></span>_unindentHelp};</pre></div>
 <p>The <code class="notranslate">_unindentHelp</code>  suffix will remove any leading indent and parse the string as a markdown document and then convert it to an inviwo document, which is what is expected by the <code class="notranslate">ProcessorInfo</code> struct.<br>
 One can refer to images like so:</p>
-<div class="highlight highlight-source-c++"><pre class="notranslate"><span class="pl-s"><span class="pl-pds">"</span>![](file:~modulePath~/docs/images/heightfield-network.png)<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-c++"><pre class="notranslate"><span class="pl-s"><span class="pl-pds">"</span>![](file:///&lt;modulePath&gt;/docs/images/heightfield-network.png)<span class="pl-pds">"</span></span></pre></div>
 <p>or networks</p>
-<div class="highlight highlight-source-c++"><pre class="notranslate"><span class="pl-s"><span class="pl-pds">"</span>[basegl/instance_renderer.inv](file:~modulePath~/data/workspaces/instance_renderer.inv)<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-c++"><pre class="notranslate"><span class="pl-s"><span class="pl-pds">"</span>[basegl/instance_renderer.inv](file:///&lt;modulePath&gt;/data/workspaces/instance_renderer.inv)<span class="pl-pds">"</span></span></pre></div>
 <p>Images will be shown inline, and clicking on processor network will append them to the current network.<br>
 To be able to refer to files there are two placeholder <code class="notranslate">~basePath~</code> and <code class="notranslate">~modulePath~</code> the former will refer to the base path of the inviwo installation and the latter to the current module. Make sure that any resources linked are also included in the installer. By default the <code class="notranslate">data</code> directory and the <code class="notranslate">docs</code> folders are always included in the installer.</p>
 <p>For Ports a second constructor argument has been added for a help Document like so</p>
