--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,12 @@
 </style>
 </head>
 <body>
+<h2>2023-03-06 C++20 and Qt6</h2>
+<p>A C++20 compiler is now required, in practice, only features that are supported by MSVC, Clang, GCC, and AppleClang are used, which usually means that everything that is supported by the latest version of XCode can bu used.<br>
+Notably ranges is still missing in AppleClang. All support for Qt5 is not removed and Qt6 is now required.<br>
+We previously used tcb/span.hpp, that is now replaced with std::span and the dependency has been removed.<br>
+Sigar has also been removed since it has not been updated for over 10 years.<br>
+Unless we find a compelling need for the functionality no replacement will been added.</p>
 <h2>2023-02-28 ColorScale Legend now shows isovalues</h2>
 <p>The legend produced by the <code class="notranslate">ColorScale Legend</code> processor now shows the isovalues similar to the transfer function property and TF editor.<br>
 <a target="_blank" rel="noopener noreferrer" href="resources/changelog/colorscalelegend.jpg"><img src="resources/changelog/colorscalelegend.jpg" alt="ColorScale Legend with isovalues" style="max-width: 100%;"></a></p>
