ChangeLog: image format change

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -123,7 +123,7 @@ Similarly there is a <code class="notranslate">inviwo/core/common/factoryutil.h<
 <h2>2022-09-14 New CompositeProcessor property configuration dialog</h2>
 <p>The long deprecated UsageMode has now been removed and with that the only way to select which properties was shown in a <code class="notranslate">CompositeProcessor</code>.<br>
 To fix that, the <code class="notranslate">CompositeProcessor</code> got a new dialog <code class="notranslate">Configure Properties</code>, accessible from the context menu in the network editor.<br>
-<a target="_blank" rel="noopener noreferrer" href="resources/changelog/configure-properties.png"><img src="resources/changelog/configure-properties.png" alt="Configure Properties" style="max-width: 100%;"></a><br>
+<a target="_blank" rel="noopener noreferrer" href="resources/changelog/configure-properties.jpg"><img src="resources/changelog/configure-properties.jpg" alt="Configure Properties" style="max-width: 100%;"></a><br>
 In the dialog one can select which of the properties in the sub network that should be exposed in the <code class="notranslate">CompositeProcessor</code>,It is also possible to mark sub properties as read only or invisible to potentially reduce complexity.</p>
 <h2>2022-09-09 Updated ext/libtiff</h2>
 <p>The libtiff library located in <code class="notranslate">ext/libtiff</code> was updated to the latest release 4.4.0.</p>
@@ -245,7 +245,7 @@ The <code class="notranslate">dat</code> and <code class="notranslate">ivf</code
 <h2>2021-10-29 Internal Processor Links</h2>
 <p>It is now possible to link different properties internally within a processor. One can for example link the style of x, y, and z Axis Properties.<br>
 The internal links are accessible in the processor context menu.<br>
-<a target="_blank" rel="noopener noreferrer" href="resources/changelog/internal-links.png"><img src="resources/changelog/internal-links.png" alt="Internal Links" style="max-width: 100%;"></a></p>
+<a target="_blank" rel="noopener noreferrer" href="resources/changelog/internal-links.jpg"><img src="resources/changelog/internal-links.jpg" alt="Internal Links" style="max-width: 100%;"></a></p>
 <h2>2021-10-15 Updated Brushing &amp; Linking</h2>
 <p><a target="_blank" rel="noopener noreferrer" href="resources/changelog/brushing.jpg"><img src="resources/changelog/brushing.jpg" alt="Brushing &amp; Linking" style="max-width: 100%;"></a><br>
 Brushing &amp; Linking (B&amp;L) was completely reworked. Now the B&amp;L inports and outports have their own B&amp;L managers. Brushing events were deprecated and replaced with brushing actions in the B&amp;L manager. The manager supports brushing actions for <em>filtering</em>, <em>selecting</em>, and <em>highlighting</em>.</p>
@@ -285,7 +285,7 @@ Rather include the needed headers directly. We have also changed all include gua
 to use <code class="notranslate">#pragma once</code> instead of the ifdef dance. There is a helper script in<br>
 <code class="notranslate">tools/refactoring/update-inc-guard.py</code> that can be used on other repos.</p>
 <h2>2021-08-19 Canvas With Properties</h2>
-<p><a target="_blank" rel="noopener noreferrer" href="resources/changelog/canvas-with-properties.png"><img src="resources/changelog/canvas-with-properties.png" alt="Canvas With Properties" style="max-width: 100%;"></a><br>
+<p><a target="_blank" rel="noopener noreferrer" href="resources/changelog/canvas-with-properties.jpg"><img src="resources/changelog/canvas-with-properties.jpg" alt="Canvas With Properties" style="max-width: 100%;"></a><br>
 A new canvas processor was added which holds a canvas together with a list of<br>
 configurable properties from the network. Properties are added to the widget by appending the<br>
 property path to the <code class="notranslate">paths</code> property in the processor. There is an example workspace in<br>
