CMake:Python review fixes

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <h2>2023-09-15 CMake option <code class="notranslate">IVW_ENABLE_QT</code></h2>
-<p>A CMake option <code class="notranslate">IVW_ENABLE_QT</code> was added to allow for enabling/disabling Inviwo's Qt support globally. Qt support is enabled by default. If Qt support is disabled all modules that depends on Qt will automatically be disabled.</p>
+<p>A CMake option <code class="notranslate">IVW_ENABLE_QT</code> was added to allow for enabling/disabling Inviwo's Qt support globally. Qt support is enabled by default. If Qt support is disabled all modules that depend on Qt will automatically be disabled.</p>
 <p>At the same time the <code class="notranslate">IVW_USE_*</code> (<code class="notranslate">IVW_USE_OPENMP</code>, <code class="notranslate">IVW_USE_OPENEXR</code>, <code class="notranslate">IVW_USE_TRACY</code>) variables were renamed to <code class="notranslate">IVW_ENABLE_*</code> for consistency.</p>
 <h2>2023-09-13 CMake option <code class="notranslate">IVW_ENABLE_PYTHON</code> and improved Python error handling</h2>
 <p>A CMake option <code class="notranslate">IVW_ENABLE_PYTHON</code> was added to allow for enabling/disabling Inviwo's Python support globally. Python support is enabled by default. If Python support is disabled all modules that depends on python will automatically be disabled.</p>
