Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -7335,10 +7335,10 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferInport.ChangedAndDataGenerator">BufferInport.ChangedAndDataGenerator (class in inviwopy.data)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferInport.DataGenerator">BufferInport.DataGenerator (class in inviwopy.data)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferInport.OutportAndDataGenerator">BufferInport.OutportAndDataGenerator (class in inviwopy.data)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferINT16">BufferINT16 (class in inviwopy.data)</a>
@@ -7440,6 +7440,8 @@
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferVec4UINT64">BufferVec4UINT64 (class in inviwopy.data)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferVec4UINT8">BufferVec4UINT8 (class in inviwopy.data)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Version.build">build (inviwopy.Version property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.MouseEvent.button">button (inviwopy.MouseEvent property)</a>
 </li>
@@ -8813,6 +8815,8 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DrawType">DrawType (class in inviwopy.data)</a>
 </li>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.dropColumn">dropColumn() (ivwdataframe.DataFrame method)</a>
+</li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.MeshInfo.dt">dt (inviwopy.data.MeshInfo property)</a>
 </li>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.dvec2">dvec2 (class in inviwopy.glm)</a>
@@ -9477,6 +9481,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.CameraProperty.getClipPosFromNormalizedDeviceCoords">(inviwopy.properties.CameraProperty method)</a>
 </li>
       </ul></li>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.getColumn">getColumn() (ivwdataframe.DataFrame method)</a>
+</li>
       <li><a href="_generated/inviwopy.html#inviwopy.Outport.getConnectedInports">getConnectedInports() (inviwopy.Outport method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.Inport.getConnectedOutport">getConnectedOutport() (inviwopy.Inport method)</a>
@@ -9785,6 +9791,8 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.DataWriterFactory.getImageWriter">getImageWriter() (inviwopy.DataWriterFactory method)</a>
 </li>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.getIndexColumn">getIndexColumn() (ivwdataframe.DataFrame method)</a>
+</li>
       <li><a href="_generated/ivwbnl.html#ivwbnl.BrushingAndLinkingInport.getIndices">getIndices() (ivwbnl.BrushingAndLinkingInport method)</a>
 
       <ul>
@@ -9873,14 +9881,14 @@
         <li><a href="_generated/inviwopy.html#inviwopy.DataWriter.getOption">(inviwopy.DataWriter method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.getOutport">getOutport() (inviwopy.Processor method)</a>
 
       <ul>
         <li><a href="_generated/inviwopy.html#inviwopy.ProcessorNetwork.getOutport">(inviwopy.ProcessorNetwork method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.InviwoApplication.getOutputPath">getOutputPath() (inviwopy.InviwoApplication method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.DataWriter.getOverwrite">getOverwrite() (inviwopy.DataWriter method)</a>
@@ -13026,7 +13034,7 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListProperty.prefabCount">prefabCount (inviwopy.properties.ListProperty property)</a>
 </li>
-      <li><a href="_generated/inviwopy.html#inviwopy.Version.preRelease">preRelease() (inviwopy.Version method)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.Version.preRelease">preRelease (inviwopy.Version property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.KeyState.Press">Press (inviwopy.KeyState attribute)</a>
 
