Update C++ API Docs

--- a/cpp-api/structinviwo_1_1NoData.html
+++ b/cpp-api/structinviwo_1_1NoData.html
@@ -95,7 +95,7 @@ $(document).ready(function(){initNavTree('structinviwo_1_1NoData.html',''); init
 </div><!--header-->
 <div class="contents">
 <hr/>The documentation for this struct was generated from the following file:<ul>
-<li><b>data.h</b></li>
+<li><b>nodata.h</b></li>
 </ul>
 </div><!-- contents -->
 </div><!-- doc-content -->
